--- a/index.css
+++ b/index.css
@@ -1,39 +1,69 @@
+*{
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+}
+
 .container {
+    background-color: antiquewhite;
     margin: auto;
-    position: absolute;
-    top: 43%;
-    left: 42%;
+    margin-top: 3rem;
+    padding-inline:3rem ;
+    border-radius: 15px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-evenly;
     flex-direction: column;
+    width: 50%;
+    height: 46rem;
+    box-shadow: 3px -1px 62px 12px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 3px -1px 62px 12px rgba(0,0,0,0.75);
+    -moz-box-shadow: 3px -1px 62px 12px rgba(0,0,0,0.75);
 }
 
+.image img{
+width: 100%;
+border-radius: 15px ;
+}
 .heading{
-    font-size: 1rem;
-    font-family: 'Courier New', Courier, monospace;
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 7rem;
+    padding-block: 1.4rem;
 }
 
+.heading .head{
+    font-size: 2rem;
+    font-weight: bolder;
+    font-family: monospace;
+    color: rgb(5, 5, 133);
+}
+
+.heading p{
+    font-size: 1.1rem;
+    color: rgb(58, 58, 58);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.paragraph{
+line-height: 18px;
+font-family: 'Times New Roman', Times, serif;
+}
+.timer{
+    margin-top: 3rem;
+}
 span {
     font-size: 2rem;
     font-weight: 800;
 }
 .timer-block{
-    background-color: rgba(128, 128, 128, 0.568);
-    padding-inline: 2px;
+    background-color:rgb(5, 5, 133);
+    color: aliceblue;
+    padding-inline: 5px;
+    border-radius: 5px;
 }
 
-button {
-    padding-block: 0.6rem;
-    padding-inline: 1.8rem;
-    border-radius: 15px;
-    border: none;
-    color: white;
-    background-color: grey;
-    font-family: monospace;
-    margin: 5px;
-}
+
 
 
 body{
