--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
@@ -8,23 +8,25 @@
     background-color: antiquewhite;
     margin: auto;
     margin-top: 3rem;
-    padding-inline:3rem ;
+    padding-inline: 3rem;
     border-radius: 15px;
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
     width: 50%;
-    height: 46rem;
-    box-shadow: 3px -1px 62px 12px rgba(0,0,0,0.75);
-    -webkit-box-shadow: 3px -1px 62px 12px rgba(0,0,0,0.75);
-    -moz-box-shadow: 3px -1px 62px 12px rgba(0,0,0,0.75);
+    height: 50rem;
+    box-shadow: 3px -1px 62px 12px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 3px -1px 62px 12px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 3px -1px 62px 12px rgba(0, 0, 0, 0.75);
 }
 
-.image img{
-width: 100%;
-border-radius: 15px ;
+.image img {
+    width: 100%;
+    border-radius: 15px;
+    margin-top: 15px;
 }
-.heading{
+
+.heading {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -32,40 +34,80 @@ border-radius: 15px ;
     padding-block: 1.4rem;
 }
 
-.heading .head{
+.heading .head {
     font-size: 2rem;
     font-weight: bolder;
     font-family: monospace;
     color: rgb(5, 5, 133);
 }
 
-.heading p{
+.heading p {
     font-size: 1.1rem;
     color: rgb(58, 58, 58);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.paragraph{
-line-height: 18px;
-font-family: 'Times New Roman', Times, serif;
+.paragraph {
+    line-height: 18px;
+    font-family: 'Times New Roman', Times, serif;
 }
-.timer{
+
+.timer {
     margin-top: 3rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 50%;
+    margin: auto;
 }
+
 span {
     font-size: 2rem;
     font-weight: 800;
 }
-.timer-block{
-    background-color:rgb(5, 5, 133);
+
+.timer-block {
+    background-color: rgb(5, 5, 133);
     color: aliceblue;
-    padding-inline: 5px;
+    padding: 10px;
     border-radius: 5px;
+    box-shadow: 2px 79px 172px -33px rgba(0,0,0,1);
+    -webkit-box-shadow: 2px 79px 172px -33px rgba(0,0,0,1);
+    -moz-box-shadow: 2px 79px 172px -33px rgba(0,0,0,1);
+}
+
+.timer-block-day::before{
+    content: "day";
+    display: block;
+    font-size: 1.3rem;
+    font-family: monospace;
+    padding-inline: 6px;
+
+}
+.timer-block-hour::before{
+    content: "hour";
+    display: block;
+    font-size: 1.3rem;
+    font-family: monospace;
+}
+.timer-block-min::before{
+    content: "min";
+    display: block;
+    font-size: 1.3rem;
+    font-family: monospace;
+    padding-inline: 6px;
+
+}
+.timer-block-sec::before{
+    content: "sec";
+    display: block;
+    font-size: 1.3rem;
+    font-family: monospace;
+    padding-inline: 6px;
+
 }
 
 
-
-
-body{
+body {
     background-color: rgba(0, 0, 0, 0.336);
 }
